[package]
name = "smartcore-examples"
description = "Examples of code using machine learning models from SmartCore library"
homepage = "https://smartcorelib.org"
version = "0.2.0"
authors = ["SmartCore Dvelopers"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/smartcore"
repository = "https://github.com/smartcorelib/smartcore-examples"
readme = "README.md"
keywords = ["machine-learning", "statistical", "ai", "optimization", "linear-algebra"]
categories = ["science"]

[dependencies]
smartcore = { version = "0.2.0", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}
structopt = "0.3.17"
ndarray = "0.14"
nalgebra = "0.23.0"
plotters = "^0.3.0"
serde = "1.0.115"
bincode = "1.3.1"
